Fixed nav logo alignment to be center and tabs spaced around

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -49,9 +49,13 @@ padding-top: 5%;}
 .navbar-logo {
   display: flex;
   flex-wrap: wrap;
-  height: 100px;
-  width: auto;
+  height: 300px;
+  /* width: auto; */
   flex-shrink: 1;
+margin-top: -30%; 
+margin-bottom: -30%;
+ /* margin: auto;  */
+
 }
 
 
@@ -61,17 +65,18 @@ padding-top: 5%;}
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   /* background-color: rgba(0, 0, 0, 0.496); */
   background-color: black;
   position: fixed;
   top: 0;
   /* z-index: 1000; */
+  justify-content: space-around;
+  align-items: center;
 }
 
 .navDiv {
-  height: 100px;
-  width: 100%;
+  /* height: 100px;
+  width: 100%; */
   /* background-color: var(--tertiary); */
   position: fixed;
   /* color: var(--tertiary); */
@@ -81,11 +86,9 @@ padding-top: 5%;}
 }
 
 .tab {
-  margin: 35px;
-  /* position: relative; */
+  justify-content: space-between;
   display: flex;
   flex-wrap: wrap;
-top: 30px;
 font-size: large;
 color: white;
 text-decoration: none;
@@ -122,13 +125,13 @@ text-decoration: none;
 
 }
 
-.logo {
+/* .logo {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   margin-top: 72px;
   width: 50%;
-}
+} */
 
 /* .voice {
   max-width: 400px;
@@ -221,7 +224,7 @@ margin-bottom: 1%;
   color: white;
 }
 .contactBorder {
-  border: var(--orange);
+  /* border: var(--orange); */
   border-width: 2px;
   border-style: solid;
   width: 50vw;
